--- a/GoogleCalendarResearch/MVVM/View/SignInWindow.xaml
+++ b/GoogleCalendarResearch/MVVM/View/SignInWindow.xaml
@@ -4,9 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:GoogleCalendarResearch.MVVM.View"
     mc:Ignorable="d"
     Height="300"
     Width="500"
@@ -14,7 +12,8 @@
     MinWidth="500"
     FontFamily="Sans Serif Collection"
     ResizeMode="CanMinimize"
-    DataContext="{Binding RelativeSource={RelativeSource self}}">
+    DataContext="{Binding RelativeSource={RelativeSource self}}"
+    Closed="ObservableWindow_Closed">
 
     <!-- Linking up window styling -->
     <Window.Resources>
